# neuralgraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.benchmark.yml  docker-compose.yml
.claude/commands/: update-sprint-docs.md
.gemini/: GEMINI.md
.github/workflows/: project-automation.yml  project-basic-automation.yml  sprint-burndown.yml  sprint-health.yml
benches/: vector_scale_bench.rs
benchmarks/: README.md  benchmark_utils.py  docker-compose.benchmark.yml  run_benchmark.sh  unified_benchmark.py
benchmarks/ldbc/: README.md  __init__.py  ldbc_benchmark.py  ldbc_datagen.py  ldbc_queries.py  run_benchmark.sh
benchmarks/ldbc/results/: BENCHMARK_CONCLUSIONS.md
benchmarks/ldbc/results/SF0.1/: benchmark_report.md  combined_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF1/: benchmark_report.md  combined_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF100_comparison/: benchmark_report.md  combined_results.json  falkordb_results.json  neo4j_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF100_memory/: benchmark_report.md  combined_results.json  falkordb_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF100_sprint59/: benchmark_report.md  combined_results.json  falkordb_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF1_full_comparison/: benchmark_report.md  combined_results.json  falkordb_results.json  neo4j_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF1_memory/: benchmark_report.md  combined_results.json  falkordb_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF1_sprint59/: benchmark_report.md  combined_results.json  neuralgraph_results.json
benchmarks/ldbc/results/SF1_sprint59_comparison/: benchmark_report.md  combined_results.json  falkordb_results.json  neuralgraph_results.json
benchmarks/old/: arxiv_benchmark.py  falkordb_benchmark.py  latency_profile.py  latency_profile_flight.py  neuralgraph_benchmark.py  neuralgraph_comparison.py  performance_test.py  vector_1m.py
benchmarks/old/ldbc/: README.md  ldbc_benchmark.py  ldbc_datagen.py  ldbc_falkordb.py  ldbc_neo4j.py
benchmarks/results/: benchmark_report.md  benchmark_results.json
benchmarks/results_100k/: benchmark_report.md  benchmark_results.json
clients/python/: setup.py
clients/python/neuralgraph/: __init__.py  chains.py  client.py  langchain_store.py  torch_utils.py
clients/python/neuralgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clients/python/tests/: __init__.py  test_chains.py  test_langchain_store.py
crates/neural-cli/: Cargo.toml  build.rs
crates/neural-cli/examples/: arxiv_demo.rs  complete_demo.rs
crates/neural-cli/src/: auth_middleware.rs  flight.rs  main.rs  raft_server.rs  server.rs
crates/neural-cli/static/: index.html
crates/neural-core/: Cargo.toml
crates/neural-core/src/: lib.rs
crates/neural-executor/: Cargo.toml
crates/neural-executor/src/: aggregate.rs  cmp.rs  eval.rs  executor.rs  lib.rs  plan.rs  planner.rs  result.rs
crates/neural-executor/tests/: array_map_types.rs  repro_dot_id.rs  repro_edge_binding.rs  repro_id_function.rs  repro_shortest_path.rs  repro_sprint_46.rs  repro_temporal.rs  test_transactions.rs  time_travel.rs
crates/neural-parser/: Cargo.toml
crates/neural-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/neural-parser/tests/: call_procedure.rs  port_numbering.rs  repro_case.rs  repro_with.rs  shard_hints.rs  time_travel.rs
crates/neural-storage/: Cargo.toml  build.rs
crates/neural-storage/benches/: distributed_vector_bench.rs  sharding_bench.rs
crates/neural-storage/src/: auth.rs  community.rs  config.rs  constraints.rs  csc.rs  csr.rs  csv_loader.rs  etl.rs  graph_store.rs  hf_loader.rs  la.rs  lib.rs  llm.rs  logging.rs  lsm_vec.rs  memory.rs  metrics.rs  mvcc.rs  pdf.rs  persistence.rs  pma.rs  properties.rs  statistics.rs  transaction.rs  vector_index.rs  wal.rs  wal_reader.rs
crates/neural-storage/src/full_text_index/: config.rs  mod.rs  phonetic.rs  schema.rs
crates/neural-storage/src/raft/: cluster.rs  health.rs  log_store.rs  mod.rs  network.rs  state_machine.rs  types.rs  wrapper.rs
crates/neural-storage/src/sharding/: coordinator.rs  manager.rs  mod.rs  router.rs  strategy.rs
crates/neural-storage/src/vector_index/: cache.rs  client.rs  distributed.rs  load_balancer.rs  mod.rs  server.rs
crates/neural-storage/tests/: METRICS.md  cluster_integration.rs  distributed_vector_test.rs  global_metrics.rs  quantization_memory_test.rs
docs/: API_REFERENCE.md  COMPLETE_FEATURES.md  LANDING_PAGE_STRATEGY.md  QUICK_REFERENCE.md  USER_GUIDE.md  cliente.md  distributed_vector_search.md  estado_del_arte.md  neural_graph_funcional.md  neural_graph_planning.md  persistence-implementation.md  sprint_51_status.md  sprint_51_status_update.md  sprint_52_status_update.md  storage-strategy.md  summary.md
docs/archived/: ARXIV_DEMO.md  FalkorDB_Analisis_Competitivo_Detallado.md  LSM_VEC_DESIGN.md  academic_paper_features.md  consolidated_sprint_reports.md  neura_graph_arquitectura_gramatica.md  optimization_roadmap.md  phase_7_roadmap.md  user_manual.md
docs/assesments/: Guía de Arquitectura Nativa de IA para Bases de Datos de Grafos.md  NeuralGraph_Architecture_Alignment.md
docs/benchmarks/: COMPETITIVE_BENCHMARK_NEURALGRAPH_VS_FALKORDB.md  benchmark_complex_50k.md  benchmark_results.md  benchmark_results_50k.md  benchmark_results_ldbc.md  comparison_falkordb_report.md  comparison_neo4j_report.md  comparison_standard_graph_dbs.md  marketing_benchmark_report.md  neo4j_vs_neuralgraph.md  unified_benchmark_100k_results.md  unified_benchmark_results.md
examples/: ethereum_demo.py  python_client_demo.py  python_flight_demo.py
proto/: raft.proto  vector.proto
scripts/: complete_sprint.py  download_arxiv.py
