[workspace]
resolver = "2"
members = [
    "crates/neural-core",
    "crates/neural-storage",
    "crates/neural-cli",
    "crates/neural-parser",
    "crates/neural-executor",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
authors = ["NeuralGraphDB Team"]
license = "MIT"
repository = "https://github.com/neuralgraphdb/neuralgraph"

[workspace.dependencies]
# Shared dependencies across crates
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
arrow = "54"
arrow-flight = "54"
tonic = "0.12"
prost = "0.13"

# Internal crates
neural-core = { path = "crates/neural-core" }
neural-storage = { path = "crates/neural-storage" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
