[package]
name = "neural-storage"
description = "CSR matrix storage and graph persistence for NeuralGraphDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
neural-core.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true

# CSV loading
csv = "1.3"

# HuggingFace dataset loading (Parquet)
reqwest = { version = "0.12", features = ["blocking", "json"] }
parquet = "54"
arrow = "54"
dirs = "6"

# HNSW vector index
hnsw_rs = "0.3"
rand = "0.8"

# Leiden community detection
fa-leiden-cd = "0.1"

# PDF text extraction
pdf-extract = "0.7"

# JSON serialization for LLM API
serde_json = "1"

# Timestamps for embedding metadata (Sprint 56)
chrono = { version = "0.4", features = ["serde"] }

# Distributed vector search (Sprint 60)
ordered-float = "4.0"
lru = "0.12"
dashmap = "5.5"
futures = "0.3"

# Raft consensus (Sprint 52)
openraft = { version = "0.9", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
byteorder = "1.5"
tonic.workspace = true
prost.workspace = true
anyerror = "0.1"

# Prometheus metrics export (Sprint 61)
prometheus = { version = "0.13", optional = true }

[features]
default = []
metrics = ["prometheus"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "sharding_bench"
harness = false

[[bench]]
name = "distributed_vector_bench"
harness = false
